# OpenShock-AutoFlasher

./: .editorconfig  .gitignore  AutoFlash.py  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: python-publish.yml  test.yml
openshock_autoflasher/: __init__.py  __main__.py  cli.py  constants.py  flasher.py  styles.py
tests/: __init__.py  test_cli.py  test_constants.py  test_flasher.py  test_styles.py
