[project]
name = "OpenShock-AutoFlasher"
version = "0.0.4"
description = "Automatically flash OpenShock firmware to ESP32 devices"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    { name = "NanashiTheNameless" },
    { name = "NanashiTheNameless", email = "NanashiTheNameless@NamelessNanashi.dev" }
]
maintainers = [
    { name = "NanashiTheNameless" },
    { name = "NanashiTheNameless", email = "NanashiTheNameless@NamelessNanashi.dev" }
]
keywords = ["openshock", "esp32", "firmware", "flasher"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "esptool>=5.1.0",
    "pyserial>=3.5",
    "requests>=2.32.5",
    "rich>=14.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "black>=26.1.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0"
]

[project.urls]
Repository = "https://github.com/NanashiTheNameless/OpenShock-AutoFlasher"
Homepage = "https://github.com/NanashiTheNameless/OpenShock-AutoFlasher"
Issues = "https://github.com/NanashiTheNameless/OpenShock-AutoFlasher/issues"
"GitHub Sponsor" = "https://github.com/sponsors/NanashiTheNameless"
"Buy Me a Coffee" = "https://buymeacoffee.com/NamelessNanashi"
Author = "https://github.com/NanashiTheNameless"

[project.scripts]
OPSH-AutoFlash = "openshock_autoflasher.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers"]

[tool.setuptools]
packages = ["openshock_autoflasher"]

[tool.setuptools.package-data]
openshock_autoflasher = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = []
[[tool.mypy.overrides]]
module = ["esptool", "serial", "serial.tools"]
ignore_missing_imports = true
